# learning-to-rank-distillation

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REQUIREMENTS.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/: pareto_dashboard.py
artifacts/: benchmark_table.json  distillation_ablation.json  fairness_pareto_frontier.json  fairness_tradeoff.json
artifacts/cross_dataset/: cross_dataset_benchmark.json
artifacts/esci/: README.md  benchmark_table.json  fairness_pareto_frontier.json  fairness_tradeoff.json
data/esci/: SOURCE.md
docs/: artifact_policy.md  generate_architecture_diagram.py  learning_flow.html  learning_guide.md  technical_writeup.md
loadtest/: k6-ranking.js
requirements/: AGENTS.md  learning-to-rank-distillation_REQUIREMENTS.md  learning-to-rank-distillation_ROADMAP.md
src/learning_to_rank_distillation/: __init__.py  cli.py  data.py  datasets.py  features.py  schema.py
tests/: __init__.py  test_cli.py  test_datasets.py  test_features.py  test_schema.py  test_synthetic_data.py
tests/adapters/: test_esci.py  test_movielens.py  test_rectour.py
tests/benchmark/: test_cross_dataset.py  test_distillation_ablation.py  test_fairness_pareto.py  test_fairness_tradeoff.py  test_metrics.py  test_promotion_check.py  test_run_all.py
tests/distillation/: test_student_training.py
tests/evaluation/: test_ips.py
tests/fairness/: test_constrained_rerank.py  test_exposure.py  test_pareto.py
tests/fixtures/: synthetic_ranking_data.py
tests/governance/: test_promotion_gate.py
(+46 files in other folders)
